combined depressive and anxiety disorders into one datapoint

--- a/notebooks/ar_data_cleaning.ipynb
+++ b/notebooks/ar_data_cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +64,7 @@
     "     'Brunei Darussalam':'Brunei',\n",
     "     'Congo (Democratic Republic of the)': 'Democratic Republic of the Congo',\n",
     "     \"Cote d'Ivoire\": \"Ivory Coast\",\n",
+    "     \"Côte d'Ivoire\": \"Ivory Coast\",\n",
     "     'Gambia, The': 'Gambia',\n",
     "     'The Gambia': 'Gambia',\n",
     "     'Iran, Islamic Rep.': 'Iran',\n",
@@ -93,14 +94,17 @@
     "     \"Bolivia (Plurinational State of)\": 'Bolivia',\n",
     "     \"Republic of Moldova\": 'Moldova',\n",
     "     \"American Samoa\": 'Samoa',\n",
-    "     \n",
+    "     \"Lao\": 'Laos',\n",
+    "     'Taiwan (Province of China)': 'Taiwan',\n",
+    "     'Türkiye':'Turkiye',\n",
+    "     'UAE': 'United Arab Emirates',\n",
     "     }\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,19 +123,220 @@
     "\n",
     "disorders_long = disorders[['location', 'cause', 'year', 'val']].rename(columns={'location':'country', 'cause':'disorder', 'val':'pct_new_per_pop'}).replace(name_changes)\n",
     "disorders_long['year'] = pd.to_numeric(disorders_long['year'])\n",
-    "disorders_long['country'] = disorders_long['country'].replace(name_changes)\n"
+    "disorders_long['country'] = disorders_long['country'].replace(name_changes)\n",
+    "# combine depressive disorders and anxiety disorders into one column \n",
+    "disorders_long = disorders_long.groupby(['country', 'year']).sum().reset_index()\n",
+    "disorders_long['disorder'] = 'depressive or anxiety disorders'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>year</th>\n",
+       "      <th>disorder</th>\n",
+       "      <th>pct_new_per_pop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>depressive or anxiety disorders</td>\n",
+       "      <td>0.013309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>depressive or anxiety disorders</td>\n",
+       "      <td>0.013174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>depressive or anxiety disorders</td>\n",
+       "      <td>0.013054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>depressive or anxiety disorders</td>\n",
+       "      <td>0.012866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>depressive or anxiety disorders</td>\n",
+       "      <td>0.012437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6491</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>depressive or anxiety disorders</td>\n",
+       "      <td>0.005582</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6492</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>depressive or anxiety disorders</td>\n",
+       "      <td>0.005676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6493</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>depressive or anxiety disorders</td>\n",
+       "      <td>0.005708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6494</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>depressive or anxiety disorders</td>\n",
+       "      <td>0.006104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6495</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>depressive or anxiety disorders</td>\n",
+       "      <td>0.006367</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6496 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          country  year                         disorder  pct_new_per_pop\n",
+       "0     Afghanistan  1990  depressive or anxiety disorders         0.013309\n",
+       "1     Afghanistan  1991  depressive or anxiety disorders         0.013174\n",
+       "2     Afghanistan  1992  depressive or anxiety disorders         0.013054\n",
+       "3     Afghanistan  1993  depressive or anxiety disorders         0.012866\n",
+       "4     Afghanistan  1994  depressive or anxiety disorders         0.012437\n",
+       "...           ...   ...                              ...              ...\n",
+       "6491     Zimbabwe  2017  depressive or anxiety disorders         0.005582\n",
+       "6492     Zimbabwe  2018  depressive or anxiety disorders         0.005676\n",
+       "6493     Zimbabwe  2019  depressive or anxiety disorders         0.005708\n",
+       "6494     Zimbabwe  2020  depressive or anxiety disorders         0.006104\n",
+       "6495     Zimbabwe  2021  depressive or anxiety disorders         0.006367\n",
+       "\n",
+       "[6496 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "disorders_long"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# merge dfs on country and year\n",
     "happy_fish = pd.merge(happiness_long, fish_long, on=['country', 'year'], how='inner').dropna()\n",
     "happy_sugar_fish = pd.merge(happy_fish, sugar_long, on=['country', 'year'], how='inner').dropna()\n",
-    "\n"
+    "happy_sad_sugar_fish = pd.merge(happy_sugar_fish, disorders_long, on=['country', 'year'], how='inner').dropna()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Count of countries in each:\n",
+      "\n",
+      " (151, 203)\n",
+      "\n",
+      "\n",
+      "in happy_sugar_fish, not in disorders_long:\n",
+      "\n",
+      " ['Hong Kong, China']\n",
+      "\n",
+      "\n",
+      "in disorders_long, not in happy_sugar_fish:\n",
+      "\n",
+      " ['Andorra' 'Antigua and Barbuda' 'Bahamas' 'Bahrain' 'Barbados' 'Bermuda'\n",
+      " 'Bhutan' 'Brunei' 'Burundi' 'Cabo Verde' 'Comoros' 'Cook Islands'\n",
+      " 'Democratic Republic of the Congo' 'Dominica' 'Equatorial Guinea'\n",
+      " 'Eritrea' 'Fiji' 'Greenland' 'Grenada' 'Guam' 'Guinea-Bissau' 'Kiribati'\n",
+      " 'Libya' 'Marshall Islands' 'Micronesia (Federated States of)' 'Monaco'\n",
+      " 'Nauru' 'Niue' 'North Korea' 'Northern Mariana Islands' 'Palau'\n",
+      " 'Palestine' 'Papua New Guinea' 'Puerto Rico' 'Qatar'\n",
+      " 'Saint Kitts and Nevis' 'Saint Lucia' 'Saint Vincent and the Grenadines'\n",
+      " 'Samoa' 'San Marino' 'Sao Tome and Principe' 'Seychelles' 'Singapore'\n",
+      " 'Solomon Islands' 'Somalia' 'South Sudan' 'Syria' 'Timor-Leste' 'Tokelau'\n",
+      " 'Tonga' 'Tuvalu' 'United States Virgin Islands' 'Vanuatu']\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# see if countries are the same in each df\n",
+    "print(f'Count of countries in each:\\n\\n {happy_sugar_fish[\"country\"].nunique(), disorders_long[\"country\"].nunique()}\\n\\n')\n",
+    "\n",
+    "# see which countries are different - Countries in life_expectancy but not in happy_forest_sugar_fish_merged\n",
+    "print(f'in happy_sugar_fish, not in disorders_long:\\n\\n {np.setdiff1d(happy_sugar_fish[\"country\"].unique(), disorders_long[\"country\"].unique())}\\n\\n')\n",
+    "\n",
+    "# see which countries are different - Countries in continents but not in life_expectancy\n",
+    "print(f'in disorders_long, not in happy_sugar_fish:\\n\\n {np.setdiff1d(disorders_long[\"country\"].unique(), happy_sugar_fish[\"country\"].unique())}\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "happy_sad_sugar_fish.to_csv('../data/happy_sad_sugar_fish.csv', index=False)"
    ]
   }
  ],
