adjusted col names and removed text col after combining disorders into one

--- a/notebooks/ar_data_cleaning.ipynb
+++ b/notebooks/ar_data_cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,12 +126,12 @@
     "disorders_long['country'] = disorders_long['country'].replace(name_changes)\n",
     "# combine depressive disorders and anxiety disorders into one column \n",
     "disorders_long = disorders_long.groupby(['country', 'year']).sum().reset_index()\n",
-    "disorders_long['disorder'] = 'depressive or anxiety disorders'\n"
+    "disorders_long = disorders_long.rename(columns={'pct_new_per_pop':'pct_new_per_pop_disorders'})[['country', 'year', 'pct_new_per_pop_disorders']]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -157,8 +157,7 @@
        "      <th></th>\n",
        "      <th>country</th>\n",
        "      <th>year</th>\n",
-       "      <th>disorder</th>\n",
-       "      <th>pct_new_per_pop</th>\n",
+       "      <th>pct_new_per_pop_disorders</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -166,40 +165,34 @@
        "      <th>0</th>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>1990</td>\n",
-       "      <td>depressive or anxiety disorders</td>\n",
        "      <td>0.013309</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>1991</td>\n",
-       "      <td>depressive or anxiety disorders</td>\n",
        "      <td>0.013174</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>1992</td>\n",
-       "      <td>depressive or anxiety disorders</td>\n",
        "      <td>0.013054</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>1993</td>\n",
-       "      <td>depressive or anxiety disorders</td>\n",
        "      <td>0.012866</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>1994</td>\n",
-       "      <td>depressive or anxiety disorders</td>\n",
        "      <td>0.012437</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -208,60 +201,55 @@
        "      <th>6491</th>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2017</td>\n",
-       "      <td>depressive or anxiety disorders</td>\n",
        "      <td>0.005582</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6492</th>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2018</td>\n",
-       "      <td>depressive or anxiety disorders</td>\n",
        "      <td>0.005676</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6493</th>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2019</td>\n",
-       "      <td>depressive or anxiety disorders</td>\n",
        "      <td>0.005708</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6494</th>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2020</td>\n",
-       "      <td>depressive or anxiety disorders</td>\n",
        "      <td>0.006104</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6495</th>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>2021</td>\n",
-       "      <td>depressive or anxiety disorders</td>\n",
        "      <td>0.006367</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6496 rows × 4 columns</p>\n",
+       "<p>6496 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          country  year                         disorder  pct_new_per_pop\n",
-       "0     Afghanistan  1990  depressive or anxiety disorders         0.013309\n",
-       "1     Afghanistan  1991  depressive or anxiety disorders         0.013174\n",
-       "2     Afghanistan  1992  depressive or anxiety disorders         0.013054\n",
-       "3     Afghanistan  1993  depressive or anxiety disorders         0.012866\n",
-       "4     Afghanistan  1994  depressive or anxiety disorders         0.012437\n",
-       "...           ...   ...                              ...              ...\n",
-       "6491     Zimbabwe  2017  depressive or anxiety disorders         0.005582\n",
-       "6492     Zimbabwe  2018  depressive or anxiety disorders         0.005676\n",
-       "6493     Zimbabwe  2019  depressive or anxiety disorders         0.005708\n",
-       "6494     Zimbabwe  2020  depressive or anxiety disorders         0.006104\n",
-       "6495     Zimbabwe  2021  depressive or anxiety disorders         0.006367\n",
+       "          country  year  pct_new_per_pop_disorders\n",
+       "0     Afghanistan  1990                   0.013309\n",
+       "1     Afghanistan  1991                   0.013174\n",
+       "2     Afghanistan  1992                   0.013054\n",
+       "3     Afghanistan  1993                   0.012866\n",
+       "4     Afghanistan  1994                   0.012437\n",
+       "...           ...   ...                        ...\n",
+       "6491     Zimbabwe  2017                   0.005582\n",
+       "6492     Zimbabwe  2018                   0.005676\n",
+       "6493     Zimbabwe  2019                   0.005708\n",
+       "6494     Zimbabwe  2020                   0.006104\n",
+       "6495     Zimbabwe  2021                   0.006367\n",
        "\n",
-       "[6496 rows x 4 columns]"
+       "[6496 rows x 3 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
